--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,6 +1,8 @@
 body {
     height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 html {
@@ -9,4 +11,6 @@ html {
 
 #app {
     height: 100%;
+    padding: 0;
+    margin: 0;
 }
