--- a/src/styles/theme/value.scss
+++ b/src/styles/theme/value.scss
@@ -1,11 +1,11 @@
 //默认主题
 $color-ming:#a4a4a4;
 $size-ming: 14px;
-$bg-ming: #304156;
+$bg-ming: #191a23;
 $active-theme:rgb(77, 188, 255);
 
 //背景颜色
-$bg-ming-theme1: #304156;//主题1（默认）
+$bg-ming-theme1: #191a23;//主题1（默认）
 $bg-ming-theme2: #409eff;//主题2
 $bg-ming-theme3: #a16bfe;//主题3
 $bg-ming-theme4: #121317;//主题4
@@ -23,7 +23,7 @@ $select-bg-ming-theme3:#409eff;
 $select-bg-ming-theme4:#409eff;
 
 //左边导航栏选中的字体颜色（独立设置）
-$active-theme1:rgb(77, 188, 255);
+$active-theme1:#fff;
 $active-theme2:rgb(100, 248, 32);
 $active-theme3:rgb(32, 248, 219);
 $active-theme4:rgb(68, 165, 255);
