--- a/src/styles/theme/mixin.scss
+++ b/src/styles/theme/mixin.scss
@@ -1,86 +1,122 @@
 @import "./value.scss";
+
 //字体
 @mixin font-size($size) {
     font-size: $size;
 }
+
 //背景
 @mixin bg-color($bg) {
-    background-color: $bg !important;
-    // 左边导航栏选中字体颜色
-    .el-menu-item.is-active span {
-        color: $active-theme !important;
-    }
-     // 左边导航栏选中图标颜色
-    .el-menu-item.is-active i {
-        color: $active-theme !important;
-    }
-    [data-ming="theme1"] & {
-        background-color: $bg-ming-theme1 !important;
-        
-        .el-menu-item .is-active  {
-            background-color: $select-bg-ming-theme1 !important;
+    // background-color: $bg !important;
 
-            span {
-                color: $active-theme1 !important;
+    // 左边导航栏选中字体颜色
+    // .el-menu-item.is-active span {
+    //     color: $active-theme !important;
+    // }
+
+    // 左边导航栏选中图标颜色
+    // .el-menu-item.is-active i {
+    //     color: $active-theme !important;
+    // }
+
+    [data-ming="theme1"] & {
+
+        .el-menu {
+            background-color: $bg-ming-theme1 !important;
+
+            .el-menu-item {
+                color: $font-color-ming-theme1 !important;
+
+                .is-active {
+                    color: $active-theme1 !important;
+                }
+            }
+
+            .is-active {
+                background-color: $select-bg-ming-theme1 !important;
+            }
+
+            .el-menu-item:hover {
+                color: $font-color-ming-theme1 !important;
+                background-color: $bg-ming-theme1 !important;
             }
         }
-    }
-    [data-ming="theme2"] & {
-        background-color: $bg-ming-theme2 !important;
-        .el-menu-item .is-active  {
-            background-color: $select-bg-ming-theme2 !important;
 
-            span {
+
+    }
+
+    [data-ming="theme2"] & {
+
+        .el-menu-item {
+            color: $font-color-ming-theme2 !important;
+            background-color: $bg-ming-theme2 !important;
+
+            .is-active {
+                background-color: $select-bg-ming-theme2 !important;
                 color: $active-theme2 !important;
             }
         }
-        .el-menu-item .is-active i {
-            color: $active-theme2 !important;
+
+        .el-menu-item:hover {
+            color: $font-color-ming-theme2 !important;
+            background-color: $bg-ming-theme2 !important;
         }
     }
-    [data-ming="theme3"] & {
-        background-color: $bg-ming-theme3 !important;
-        .el-menu-item .is-active  {
-            background-color: $select-bg-ming-theme3 !important;
 
-            span {
+    [data-ming="theme3"] & {
+
+        .el-menu-item {
+            color: $font-color-ming-theme3 !important;
+            background-color: $bg-ming-theme3 !important;
+
+            .is-active {
+                background-color: $select-bg-ming-theme3 !important;
                 color: $active-theme3 !important;
             }
         }
-        .el-menu-item .is-active i {
+
+        .el-menu-item:hover {
+            background-color: $select-bg-ming-theme3 !important;
             color: $active-theme3 !important;
         }
     }
-    [data-ming="theme4"] & {
-        background-color: $bg-ming-theme4 !important;
-        .el-menu-item .is-active  {
-            background-color: $select-bg-ming-theme4 !important;
 
-            span {
+    [data-ming="theme4"] & {
+        .el-menu-item {
+            color: $font-color-ming-theme4 !important;
+            background-color: $bg-ming-theme4 !important;
+
+            .is-active {
+                background-color: $select-bg-ming-theme4 !important;
                 color: $active-theme4 !important;
             }
         }
-        .el-menu-item .is-active i {
-            color: $active-theme4 !important;
+
+        .el-menu-item:hover {
+            color: $font-color-ming-theme4 !important;
+            background-color: $bg-ming-theme4 !important;
         }
     }
 }
+
 //字体
-@mixin font-color($color) {
-    color: $color;
-    [data-ming="theme1"] & {
-        color: $font-color-ming-theme1 !important;
-    }
-    [data-ming="theme2"] & {
-        color: $font-color-ming-theme2 !important;
-    }
-    [data-ming="theme3"] & {
-        color: $font-color-ming-theme3 !important;
-    }
-    [data-ming="theme4"] & {
-        color: $font-color-ming-theme4 !important;
-    }
-    [data-ming="theme4"] & {
-        color: $font-color-ming-theme4 !important;
-    }
-}
+// @mixin font-color($color) {
+//     color: $color;
+
+//     [data-ming="theme1"] & {
+//         color: $active-theme1;
+//     }
+
+//     [data-ming="theme2"] & {
+//         color: $active-theme2;
+//     }
+
+//     [data-ming="theme3"] & {
+//         color: $active-theme3;
+//     }
+
+//     [data-ming="theme4"] & {
+//         color: $active-theme4;
+//     }
+
+// }
