主题色功能初步实现

--- a/src/styles/theme/index.scss
+++ b/src/styles/theme/index.scss
@@ -1,5 +1,5 @@
 @import "./mixin.scss";
-//在需要同意主题的元素上添加对应class
+//在需要统一主题的元素上添加对应class
 /*
     theme-all //需要颜色、背景颜色都统一
     theme-size //需要字体统一
@@ -10,7 +10,7 @@
     通过js进行修改主题
     "theme1" 主题选择
     提示：为了防止刷新复原问题，可使用缓存进行解决
-    window.document.documentElement.setAttribute('data-ming', "theme1");
+    window.document.documentElement.setAttribute('current-theme', "theme1");
 */
 // .theme-all{
 //     @include font-color($color-ming);
@@ -25,9 +25,4 @@
 // }
 .theme-bg{
     @include bg-color($bg-ming);
-    // .is-active{
-    //     color: unset !important;
-    // }
-    // .el-menu-item.is-active i
-   
 }
