--- a/src/styles/theme/value.scss
+++ b/src/styles/theme/value.scss
@@ -18,14 +18,14 @@ $font-color-ming-theme4:rgb(157, 252, 244);
 
 //选中背景颜色
 $select-bg-ming-theme1:#409eff;
-$select-bg-ming-theme2:#409eff;
+$select-bg-ming-theme2:#191a23;
 $select-bg-ming-theme3:#409eff;
 $select-bg-ming-theme4:#409eff;
 
 //左边导航栏选中的字体颜色（独立设置）
 $active-theme1:#fff;
-$active-theme2:rgb(100, 248, 32);
-$active-theme3:rgb(32, 248, 219);
-$active-theme4:rgb(68, 165, 255);
+$active-theme2:rgb(157, 252, 244);
+$active-theme3:#fff;
+$active-theme4:#fff;
 
  
