解决扩展路由不能显示的bug

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -14,3 +14,21 @@ html {
     padding: 0;
     margin: 0;
 }
+
+.el-breadcrumb {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 14px;
+    margin-left: 5px;
+    .el-breadcrumb__inner {
+        &.is-link {
+            display: inline-block;
+            font-weight: normal;
+            color: #424040 !important;
+        }
+    }
+    .is-last-link .is-link {
+        font-weight: normal;
+        color: #999 !important;
+    }
+}
