--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -25,7 +25,7 @@ html {
 
         &.is-link {
             display: inline-block;
-            font-weight: normal;
+            font-weight: 600;
             color: #1d99e3 !important;
         }
     }
